<resources>
    <string name="app_name">ShoppingApp</string>
    <string name="login_title">MARKETİM</string>
    <string name="username">Kullanıcı Adı</string>
    <string name="password">Şifre</string>
    <string name="save_password">Beni Hatırla</string>
    <string name="button_confirm">Giriş</string>
    <string name="my_orders">Siparişlerim</string>
    <string name="log_out">Çıkış Yap</string>
    <string name="next_icon">next icon</string>
    <string name="username_error">Geçersiz kullanıcı adı</string>
    <string name="password_error">Geçersiz parola</string>
    <string name="username_value">kariyer</string>
    <string name="password_value">2019ADev</string>
    <string name="on_way">Yolda</string>
    <string name="waiting_for_approval">Onay Bekliyor</string>
    <string name="currency">TL</string>
    <string name="ask_confirm">Çıkış yapmak istiyor musunuz?</string>
</resources>
