<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="dialogViewModel"
            type="com.okanserdaroglu.shoppingapp.viewmodel.DialogViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/margin_300"
        android:background="@drawable/bg_border_red">

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/textViewContent"
            style="@style/TextAppearance.AppCompat"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin_16"
            android:gravity="center"
            android:paddingTop="@dimen/margin_16"
            android:paddingBottom="@dimen/margin_16"
            android:text="@string/ask_confirm"
            app:layout_constraintBottom_toTopOf="@+id/buttonCancel"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:text="@string/ask_confirm" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/buttonCancel"
            style="@style/Widget.MaterialComponents.Button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:onClick="@{dialogViewModel::onCancelClick}"
            android:text="@string/my_orders"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/buttonConfirm"
            app:layout_constraintStart_toStartOf="parent" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/buttonConfirm"
            style="@style/Widget.MaterialComponents.Button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:onClick="@{dialogViewModel::onConfirmClick}"
            android:text="@string/log_out"
            app:layout_constraintBottom_toBottomOf="@+id/buttonCancel"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/buttonCancel"
            app:layout_constraintTop_toTopOf="@+id/buttonCancel" />


    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>
